Klasse Spiel, die den Spielablauf regelt, Struktur für Spieler und KI, leere Dummyklassen für leicht mittel schwer KI, Feld und Kampf.